2010-04-07  Jaime Yap  <jaimeyap@google.com>

        Reviewed by Pavel Feldman.
        Tests expectations changed due to the addition of the function symbol name for
        the call location for records sent by the InspectorTimelineAgent.
        https://bugs.webkit.org/show_bug.cgi?id=36839

        No new tests.

        * inspector/timeline-test.js:
        * platform/chromium-win/inspector/timeline-event-dispatch-expected.txt:
        * platform/chromium-win/inspector/timeline-mark-timeline-expected.txt:
        * platform/chromium-win/inspector/timeline-network-resource-expected.txt:
        * platform/chromium-win/inspector/timeline-paint-expected.txt:
        * platform/chromium-win/inspector/timeline-parse-html-expected.txt:

2010-04-07  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Jian Li.

        [chromium] Add test for a popup related crasher.
        https://bugs.webkit.org/show_bug.cgi?id=37141

        * platform/chromium/fast/forms: Added.
        * platform/chromium/fast/forms/search-popup-crasher-expected.txt: Added.
        * platform/chromium/fast/forms/search-popup-crasher.html: Added.

2010-04-07  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        Poor rendering on lala.com with frame flattening
        https://bugs.webkit.org/show_bug.cgi?id=37164

        Platform specific expected files added for test introduced in r57225.

        * platform/mac/fast/frames/flattening/iframe-flattening-offscreen-expected.txt: Added.
        * platform/qt/fast/frames/flattening/iframe-flattening-offscreen-expected.txt: Added.

2010-04-07  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Adam Barth.

        Make sure that calling bindings constructors as function does not result in crash.

        * fast/constructors: Added.
        * fast/constructors/constructor-as-function-crash-expected.txt: Added.
        * fast/constructors/constructor-as-function-crash.html: Added.
